--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,7 @@ on:
   pull_request:
     branches:
       - '*'
+  workflow_dispatch:
 
 jobs:
   test:
@@ -75,4 +76,3 @@ jobs:
           git push origin "$TAG_NAME"
           echo "Created and pushed tag: $TAG_NAME"
         fi
-
